--- a/chatWebApp/web/index.html
+++ b/chatWebApp/web/index.html
@@ -14,5 +14,10 @@
     <body style="margin-left: 20px;">
         <h1>You are about to sign up to the ultimate online chat, ever created by a human being !!!</h1>
         <a href="pages/signup/signup.html" class="btn btn-info btn-lg active" role="button">Go to Online Chat !</a>
+        <ul>
+            <li>
+                <a href="pages/fileupload/form.html">File Upload</a>
+            </li>
+        </ul>
     </body>
 </html>
