add upload file option

--- a/chatWebApp/web/pages/fileupload/form.html
+++ b/chatWebApp/web/pages/fileupload/form.html
@@ -6,7 +6,7 @@
     <body>
         <h3>Select a File:</h3>
         <form action="../upload" enctype="multipart/form-data" method="POST">
-            <input type="file" name="file1"><br>
+            <input type="file" name="file1" accept=".xml"><br>
             <input type="Submit" value="Upload File"><br>
         </form>
     </body>
