--- a/chatWebApp/web/pages/fileupload/test.html
+++ b/chatWebApp/web/pages/fileupload/test.html
@@ -1,3 +1,4 @@
+<!--action="../upload"-->
 <!DOCTYPE html>
 <html>
 <head>
@@ -10,10 +11,31 @@
             });
         });
     </script>
+
+    <script>
+        $(document).ready(function(){
+            $("fileUpload").submit(function(){;
+                $("result").text("OK");
+                alert("popup")
+            });
+        });
+    </script>
 </head>
 
 <body>
 <p>If you click on me, I will disappear.</p>
+
+
+<h3>Select a File:</h3>
+<form enctype="multipart/form-data" method="post" id="fileUpload">
+    <input type="file" name="file1" accept=".xml"><br>
+    <input type="Submit" value="Upload File"><br>
+</form>
+
+<div id="result">
+    <h1></h1>
+</div>
+
 </body>
 
 </html>
