--- a/chatWebApp/web/pages/fileupload/TEST2.html
+++ b/chatWebApp/web/pages/fileupload/TEST2.html
@@ -27,15 +27,20 @@
                         $("#result").text("Failed to get result from server " + e);
                     },
                     success: function(r) {
-                        $("#result").text(r);
+                        $("#result").text("Your game has been submitted successfully.");
                         console.info(r);
                         obj = JSON.parse(r);
 
                         $('<tr>').html(
-                                "<td>" + obj.structure.handsCount + "</td>" +
-                                "<td>" + obj.structure.buy + "</td>" +
-                                "<td>" + obj.structure.blindes.big + "</td>" +
-                                "<td>" + obj.structure.blindes.small + "</td>")
+                            "<td>" + obj.gameTitle + "</td>" +
+                            "<td>" + obj.uploadedBy + "</td>" +
+                            "<td>" + obj.structure.handsCount + "</td>" +
+                            "<td>" + obj.numberOfPlayers + "</td>"+
+                            "<td>" + obj.registeredPlayers + "</td>" +
+                            "<td>" + obj.structure.blindes.big + "</td>" +
+                            "<td>" + obj.structure.blindes.small + "</td>" +
+                            "<td>" + obj.structure.buy + "</td>"+
+                            "<td>" + obj.structure.blindes.fixed==false? 'false':'111' + "</td>" )
                             .appendTo('#games_table');
 
                     }
@@ -61,10 +66,15 @@
 
 <table id="games_table" class="table">
     <tr>
+        <th>Game Title</th>
+        <th>Uploaded by</th>
         <th>Hands Count</th>
-        <th>Buy</th>
+        <th>Total Players</th>
+        <th>Registered Players</th>
         <th>Big</th>
         <th>Small</th>
+        <th>Buy</th>
+        <th>Fixed Blindes</th>
     </tr>
 </table>
 
