--- a/chatWebApp/web/pages/signup/signUpPage.html
+++ b/chatWebApp/web/pages/signup/signUpPage.html
@@ -20,7 +20,7 @@
 </table>
 
 
-<form name="form1" method="GET" action="signup">
+<form name="form1" method="GET" action="/login">
     <div class="container">
         <table width="350" align=center  >
             <tr>
@@ -28,7 +28,7 @@
                     <div ><b>Name :</font></b></div>
                 </td>
                 <td height="43" width="54%">
-                    <input type="text" name="userName" placeholder="Enter name" class="signup" size=13>
+                    <input type="text" name="username" placeholder="Enter name" class="signup" size=13>
                 </td>
 
             </tr>
@@ -38,7 +38,7 @@
                     <div><b>Type of player:</font></b></div>
                 </td>
                 <td height="44" width="54%" >
-                    <SELECT name="typePlayer">
+                    <SELECT name="playerType">
                         <OPTION VALUE=""> Please select </OPTION>
                         <OPTION VALUE="HUMAN">HUMAN </OPTION>
                         <OPTION VALUE="COMPUTER">COMPUTER</OPTION>
