--- a/chatWebApp/web/pages/signup/signUpPage.html
+++ b/chatWebApp/web/pages/signup/signUpPage.html
@@ -31,7 +31,7 @@
                     <div ><b>Name:</font></b></div>
                 </td>
                 <td height="43" width="54%">
-                    <input type="text" name="username" placeholder="Enter name" class="signup" size=13>
+                    <input required type="text" name="username" placeholder="Enter name" class="signup" size=13>
                 </td>
 
             </tr>
@@ -41,7 +41,7 @@
                     <div><b>Type of player:</font></b></div>
                 </td>
                 <td height="44" width="54%" >
-                    <SELECT name="playerType">
+                    <SELECT required name="playerType">
                         <OPTION VALUE=""> Please select </OPTION>
                         <OPTION VALUE="HUMAN">HUMAN </OPTION>
                         <OPTION VALUE="COMPUTER">COMPUTER</OPTION>
