Add join game button

--- a/chatWebApp/web/pages/PokerLobby/lobby.html
+++ b/chatWebApp/web/pages/PokerLobby/lobby.html
@@ -41,6 +41,7 @@
                     <th align=center><b>Small</b></th>
                     <th align=center><b>Buy</b></th>
                     <th align=center><b>Fixed Blindes</b></th>
+                    <th align=center><b></b></th>
                 </tr>
 
             </table>
