עידכנתי שהעמוד יראה בסדר מבחינת השם והמקום ל input

--- a/chatWebApp/web/pages/signup/signUpPage.html
+++ b/chatWebApp/web/pages/signup/signUpPage.html
@@ -27,21 +27,17 @@
     <div class="container">
         <table width="350" align=center  >
             <tr>
-                <td height="43" width="46%" align=center-right>
-                    <div ><b>Name:</font></b></div>
-                </td>
-                <td height="43" width="54%">
-                    <input required type="text" name="username" placeholder="Enter name" class="signup" size=13>
+                <td height="43" width="90%" align=center>
+                    <label><b>Name:</font></b></label>
+                    <input  height="44" width="54%" required type="text" name="username" placeholder="Enter name" class="signup" size=13>
                 </td>
 
             </tr>
 
             <tr>
-                <td height="44" width="46%" >
-                    <div><b>Type of player:</font></b></div>
-                </td>
-                <td height="44" width="54%" >
-                    <SELECT required name="playerType">
+                <td height="43" width="90%" align=center>
+                    <label><b>Type of player:</font></b></label>
+                    <SELECT  height="44" width="54%"required name="playerType">
                         <OPTION VALUE=""> Please select </OPTION>
                         <OPTION VALUE="HUMAN">HUMAN </OPTION>
                         <OPTION VALUE="COMPUTER">COMPUTER</OPTION>
