--- a/chatWebApp/web/pages/gameRoom/room.html
+++ b/chatWebApp/web/pages/gameRoom/room.html
@@ -1,11 +1,106 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-	<title>Online Game</title>
-	<script src="../../common/jquery-2.0.3.min.js"></script>
+	<head>
+		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+		<title>Texas Holdem Poker Room</title>
+		<link rel="stylesheet" href="profile_card.css">
+
+		<script type="text/javascript" src="../jquery-2.0.3.min.js"></script></head>
 	<script src="../../common/context-path-helper.js"></script>
-</head>
+	<script src="../../common/JS/game_room.js"></script>
+
+	</head>
 <body>
+<h1>My poker game<h1><!--need to replace with the real name of the game-->
+
+	<table align=center width=95% border=1>
+
+		<tr>
+			<td valign="top"  width=10%>
+				<h2>Player list<h2>
+					<ul>
+						<li>avital</li>
+						<br>
+						<li>avi</li>
+						<br>
+						<li>daniel</li>
+						<br>
+						<li>adi &nbsp;<image src="myTurn.png"></image><li> <!--בתור של שחקן נשים לידו אייקון שזה תורו-->
+
+					</ul>
+
+			</td>
+			<td  valign="top" width=80%>
+
+				<table width=95% align=center>
+					<tr>
+						<td>
+							<!--כאן יכול להיכנס שחקן-->
+							<div class="card"style="width:15%; height:15%" >
+								<h1 style=text-align:center>John Doe</h1>
+								<img src="pokerFace.jpg" alt="John" style="width:20%; height:20%">
+								<p class="type" ><b>type:</b> H</p> <!--here the user type-->
+								<p class="state"><b>state:</b> D</p><!--here the user state-->
+								<p class="chips"><b>chips:</b> 250</p><!--here the user chips-->
+								<p class="buys"><b>buys:</b> 3</p><!--here the user buys-->
+								<p class="Hand_Won"><b>Hand_Won:</b> 5/10</p><!--here the user Hand_Won-->
+							</div>
+						</td>
+						<td width=70%>&nbsp;</td>
+						<td>
+						<td>
+							<!--כאן יכול להיכנס שחקן-->
+							<div class="card"style="width:15%; height:15%"  >
+								<h1 style=text-align:center>John Doe</h1>
+								<img src="pokerFace.jpg" alt="John" style="width:20%; height:20%">
+								<p class="type" ><b>type:</b> H</p> <!--here the user type-->
+								<p class="state"><b>state:</b> D</p><!--here the user state-->
+								<p class="chips"><b>chips:</b> 250</p><!--here the user chips-->
+								<p class="buys"><b>buys:</b> 3</p><!--here the user buys-->
+								<p class="Hand_Won"><b>Hand_Won:</b> 5/10</p><!--here the user Hand_Won-->
+							</div></td>
+					</tr></table>
+			</td>
+			<td   valign="top" width=10%>
+				<h2>Game Details</h2>
+				<table border="1" align=center width=90%>
+					<tr>
+						<td><b>total Hand chips</b></td>
+						<td>150</td>
+					</tr>
+					<tr>
+						<td><b> Hand number</b></td>
+						<td>3/5</td>
+					</tr>
+					<tr>
+						<td><b>Big</b></td>
+						<td>50</td>
+					</tr>
+					<tr>
+						<td><b>Small</b></td>
+						<td>10</td>
+					</tr>
+
+				</table>
+
+			</td>
+
+
+		</tr>
+
+
+
+
+	</table>
+
+
+
+
+
+
 </body>
+
+
+
 </html>
+
