room.html+room.css

--- a/chatWebApp/web/pages/gameRoom/room.html
+++ b/chatWebApp/web/pages/gameRoom/room.html
@@ -205,18 +205,19 @@
                 <table>
                     <tr>
                         <td>
-                            <input id="RaisButton" type="Submit" value="Rais">
+                            <button id="RaisButton" type="button">Rais</button>
+
                         </td>
                         <td>
-                            <input id="CheckButton" type="Submit" value="check">
+                            <button id="CheckButton" type="button" >Check</button>
                         </td>
                     </tr>
                     <tr>
                         <td>
-                            <input id="CallButton" type="Submit" value="call">
+                            <button id="CallButton" type="button">Call</button>
                         </td>
                         <td>
-                            <input id="FoldButton" type="Submit" value="Fold" >
+                            <button id="FoldButton" type="button"  >Fold</button>
 
                         </td>
 
